--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,35 @@
+/* *{
+	padding: 0;
+	margin: 0;
+	border: 0;
+} */
+
 body {
-  font-size: 18px;
-  margin: 0;
-  padding: 0;
+  font-size: 18px; 
   background-color: #592c8b;
+  padding: 0;
+margin: 0;
+	border: 0;
+}
+
+.wrap {
+    background-color: #fff;
+    width: 1070px;
+    margin: 0px auto;
+    padding: 30px 60px; 
 }
 
 h1,
 h2,
 h3 {
-  text-align: center;
+  text-align: center;  
 }
 
-.conteiner {
-  width: 1200px;
+/* .conteiner {
+  width: 1070px;
   margin: 0px auto;
-  padding: 30px 30px;
-  background-color: #fff;
-}
+  padding: 50px;    
+} */
 
 .main-nav {
   display: flex;
@@ -53,4 +66,38 @@ h1 {
 .deadline {
   text-align: center;
   font-weight: 800;
+}
+
+/*Responsive*/
+/* 992px - 1200px */
+@media screen and (max-width: 1200px) {
+	.wrap {
+		width: 960px;
+    }   
+}
+
+/* 768px - 992px */
+@media screen and (max-width: 992px) {
+	.wrap {
+        width: 720px; 
+}
+
+
+/* 576px - 768px */
+@media screen and (max-width: 768px) {
+	.wrap {
+        width: 540px;                
+}
+
+    .img {
+            margin: 15px 0;
+            width: 85%;
+    }
+
+/* 320px - 576px */
+@media screen and (max-width: 576px) {
+	.wrap {
+		width: 90%;
+    }
+    
 }
